# shellcode_compiler

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  c-to-shellcode.py  payload.c  payload.rs  payload.zig  pyproject.toml  settings.example.toml
assets/: AdjustStack.s  Makefile  Makefile.j2  cargo.toml  linker.ld  loader.c  loader.j2.c  winlib.c
assets/.cargo/: config.toml
assets/common/: AdjustStack.s  AdjustStack.s.j2  Makefile.j2  linker.ld  winlib.j2.c
assets/rust/: fake_linker.sh
assets/zig/: build.zig  build.zig.zon
piclin/: __init__.py  config.py  winlib.py
shellcode_compiler/: __init__.py  __main__.py  config.py  util.py  winlib.py
tests/: test_main.py
